hphp/test/zend/good/Zend/tests/traits/bug64235b.php.expectf

Fatal error: Unknown trait 'TestParentClass' in %s/bug64235b.php on line 21
